# box-menu-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  todo.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: cli.rs  config.rs  escape.rs  icon.rs  list.rs  main.rs  menu.rs  visibility.rs
