[package]
name = "box-menu-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
confy = { version = "2.0.0", default-features = false, features = ["yaml_conf"] }
freedesktop-desktop-entry = "0.8.0"
freedesktop-icons = "0.4.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
